--- a/style.css
+++ b/style.css
@@ -69,7 +69,14 @@ main{
     font-family: 'Space Mono', monospace;
     font-weight: 700;
     margin-bottom: 20px;
+
 }
+
+input[type=number]::-webkit-inner-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
+
 .card-one-tip{
     color: var(--Dark-grayish-cyan);
     font-size: 16px;
@@ -223,7 +230,7 @@ main{
 .card-two-price{
     color: var(--Strong-cyan);
     grid-area: c;
-    font-size: 33px;
+    font-size: 28px;
     font-weight: 700;
     justify-self: end;
 }
