--- a/style.css
+++ b/style.css
@@ -19,13 +19,15 @@ body{
     background-color: var(--Light-grayish-cyan);
     font-family: 'Space Mono', monospace;
     font-size: 16px;
+
+
 }
 main{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 0 auto;
+    height: 100vh;
 
 }
 .header-img{
