--- a/style.css
+++ b/style.css
@@ -87,11 +87,10 @@ input[type=number]::-webkit-inner-spin-button {
 }
 .grid{
     display: grid;
-    grid-template-areas: "a b"
-                         "c d"
-                         "e f";
+    grid-template-areas: "a b c"
+                         "d e f";
     grid-gap: 20px;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: 33% 34% 33%;
     margin: 10px 20px 20px 0px;
 
 }
@@ -321,5 +320,8 @@ input[type=number]::-webkit-inner-spin-button {
     }
     .card-two-total{
         margin-bottom: 150px;
+    }
+    .card-two-price{
+        font-size: 33px;
     }
 }
